fixed terminal not being visible, fixed issue with style

--- a/web/root/style/style.scss
+++ b/web/root/style/style.scss
@@ -20,6 +20,7 @@ body {
   width: 100vw;
   overflow: hidden;
   background-color: var(--bg-0);
+  display: flex;
 }
 
 .graph {
